[package]
name = "paystack-rs"
version = "0.1.0"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
authors = ["Oghenemarho Orukele <orukele.dev@gmail.com>"]
homepage = "https://github.com/morukele/paystack-rs"
description = "A unofficial client library for the Paystack API"
repository = "https://github.com/morukele/paystack-rs"
keywords = [
	"payment",
	"paystack",
    "api"
]
readme = "README.md"
categories = ["api-bindings"]
license = "MIT"

[lib]
name = "paystack"


[dependencies]
thiserror = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version ="1", features = ["derive"]}

[dev-dependencies]
fake = "2"
rand = "0.8"