[package]
name = "paystack-rs"
version = "0.1.2"
description = "A unofficial client library for the Paystack API"
authors = ["Oghenemarho Orukele <orukele.dev@gmail.com>"]
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/morukele/paystack-rs"
repository = "https://github.com/morukele/paystack-rs"
documentation = "https://docs.rs/paystack-rs"
keywords = [
	"payment",
	"paystack",
    "api"
]
readme = "README.md"
categories = ["api-bindings", "finance"]
license = "MIT"

[lib]
name = "paystack"


[dependencies]
thiserror = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version ="1", features = ["derive"]}

[dev-dependencies]
fake = "2"
rand = "0.8"