[package]
name = "paystack-rs"
version = "0.2.2"
description = "Paystack API Wrapper"
authors = ["Oghenemarho Orukele <orukele.dev@gmail.com>"]
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/morukele/paystack-rs"
repository = "https://github.com/morukele/paystack-rs"
documentation = "https://docs.rs/paystack-rs"
keywords = [
	"payment",
	"paystack",
    "api",
	"finance",
	"async"
]
readme = "README.md"
categories = ["api-bindings", "finance"]
license = "MIT"

[lib]
name = "paystack"

[dependencies]
thiserror = "1"
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version ="1", features = ["derive"]}
log = "0.4.20"
async-trait = "0.1.81"
